# dynamic-ips

./: .gitattributes  .gitignore  CMakeLists.txt  FindCPLEX1.cmake  LICENSE  Manhattan_polygon_neigh1-6.csv  NewVersionID.ipynb  NewVersionID.py  README.md  Request.cpp  Request2.h  VisualizationChart.py  Visualization_notebook.ipynb
Bike_Sharing/: CG_binding.py  CMakeLists.txt  FindCPLEX.cmake  pyproject.toml  setup.py
Bike_Sharing/src/: CG_binding.cpp  CMakeLists.txt  __init__.py  realTimeMain.cpp  test_binding.py
Bike_Sharing/src/data/: CMakeLists.txt  Graph.cpp  Graph.h  Instance.cpp  Instance.h  Label.cpp  Label.h  Parameters.cpp  Parameters.h  Route.cpp  Route.h  Station.cpp  Station.h  Stop.cpp  Stop.h  Task.cpp  Task.h  Vehicle.cpp  Vehicle.h
Bike_Sharing/src/solver/: CMakeLists.txt  LabelingSubProblem.cpp  LabelingSubProblem.h  MasterAlgorithm.cpp  MasterAlgorithm.h  MasterModeler.cpp  MasterModeler.h  SubproModeler.cpp  SubproModeler.h  solver.cpp  solver.h
Bike_Sharing/src/utilities/: CMakeLists.txt  InputPaths.cpp  InputPaths.h  MyTools.cpp  MyTools.h  ReadWrite.cpp  ReadWrite.h  types.h
DARP_IPS/: .gitignore  AnyParameters.json  BatchParameters.json  CC-anytime.sh  CMakeCache.txt  CMakeLists.txt  FindCPLEX.cmake  FindEigen3.cmake  FindGUROBI.cmake  README.md  logfile.txt  makefile  reproduce-anytime.sh  reproduce-batch.sh  run-ISUD.sh  run-all.sh  run-all.sh.save  run-all1.sh  run-all2.sh  run-anytime.sh  run-arguments.sh  run-batch.sh  run-groups.sh  run-small-canada.sh  run-small-canada1.sh  run-small.sh  run-vector-auto.sh  run-vector-auto_1.sh  run-vector.sh  run.batch  run.test  run_all.sh  test.sh
DARP_IPS/NYC-DARP-Benchmark/: Zones.txt
DARP_IPS/NYC-DARP-Benchmark/vehicles_uniform/: vehicles_1150_4.txt  vehicles_1200_4.txt  vehicles_1500_4.txt  vehicles_1600_4.txt  vehicles_1750_4.txt  vehicles_1800_4.txt  vehicles_1900_4.txt  vehicles_2100_4.txt  vehicles_2200_4.txt  vehicles_2800_4.txt  vehicles_500_4.txt  vehicles_700_4.txt  vehicles_800_4.txt  vehicles_850_4.txt  vehicles_900_4.txt  vehicles_950_4.txt
DARP_IPS/NYC-DARP-Benchmark/vehicles_warmStart_11/: ONBOARDS_vehicles_1050_4.txt  ONBOARDS_vehicles_1150_4.txt  ONBOARDS_vehicles_1200_4.txt  ONBOARDS_vehicles_1400_4.txt  ONBOARDS_vehicles_1900_4.txt  ONBOARDS_vehicles_1950_4.txt  vehicles_1000_4.txt  vehicles_1050_4.txt  vehicles_1150_4.txt  vehicles_1250_4.txt  vehicles_1350_4.txt  vehicles_1700_4.txt  vehicles_1800_4.txt  vehicles_1850_4.txt  vehicles_1950_4.txt
DARP_IPS/Riley_Benchmark/: README.md  Zones.txt
DARP_IPS/Riley_Benchmark/vehicles_byDemand/: vehicles_2200_4.txt  vehicles_2400_4.txt
DARP_IPS/Riley_Benchmark/vehicles_uniform/: vehicles_1200_4.txt  vehicles_1350_4.txt  vehicles_3000_4.txt  vehicles_650_4.txt  vehicles_750_4.txt
DARP_IPS/Riley_Benchmark/vehicles_warmStart_11/: ONBOARDS_vehicles_1100_4.txt  ONBOARDS_vehicles_1300_4.txt  ONBOARDS_vehicles_1600_4.txt  ONBOARDS_vehicles_2000_4.txt  ONBOARDS_vehicles_950_4.txt  vehicles_1000_4.txt  vehicles_1050_4.txt  vehicles_1300_4.txt  vehicles_1450_4.txt  vehicles_900_4.txt  vehicles_950_4.txt
DARP_IPS/computational_scripts/: .gitignore.reproducibility  README_REPRODUCIBILITY.md
DARP_IPS/computational_scripts/experiments/: A_CG.json  B_CG.json  smoke_test.json
DARP_IPS/computational_scripts/parameters/: AnyParameters.json  BatchParameters.json
DARP_IPS/computational_scripts/scripts/: make_commands.py  run_commands.sh  run_one.sh  run_slurm_array.sh
DARP_IPS/datasets/: ACG-AUX.txt  ACG-AUXD.txt  ACG-AUXP.txt  ACG-CP.txt  ACG-LP-S.txt  ACG-LP.txt  ACG-Sort0.txt  ACG-Sort2.txt  ACG-Sort3.txt  Ab_drop.txt  Ab_truncate.txt  AnyParameters.json  Anytime_mode.txt  BatchParameters.json  Dual.txt  Full_Parameters.json  ICG_R2.txt  ICG_R3.txt  InstanceNames-120.txt  InstanceNames.txt  InstanceNames1.txt  Instances-240.txt  Instances-240_1.txt  Param_mode_1a.txt  Param_mode_1r.txt  Param_mode_2a.txt  Param_mode_2b.txt  Param_mode_2c.txt  Param_mode_2d.txt  Param_mode_2r.txt  Parameters.txt  Partial.txt  Zones.txt  commit.txt  dominance.txt  dropPick.txt  dynamic.txt  initial.txt  nbPick1.txt  nbPick2.txt  (+16 more)
DARP_IPS/datasets/20150713-16-02m/: IN_20150713_16-01m.txt  IN_20150713_16-02m.txt  TR_20150713_16-01m.txt  TR_20150713_16-02m.csv  TR_20150713_16-02m.txt
DARP_IPS/datasets/20150713-16-60m/: IN_20150713_16-60m.txt  TR_20150713_16-60m.csv  TR_20150713_16-60m.txt
DARP_IPS/datasets/20150713_16-01m/: IN_20150713_16-01m.txt  MIPLog.txt  TR_20150713_16-01m.csv  TR_20150713_16-01m.txt  TR_20150713_16-60m2.csv  log.txt
DARP_IPS/datasets/20150713_16-03m/: IN_20150713_16-03m.txt  LogFile_.txt  LogFile_20150713_16-03m.txt  ONBOARDS_20150713_16-03m.txt  Requests_20150713_16-03m.csv  Routes_20150713_16-03m.csv  TR_20150713_16-03m - Copy.txt  TR_20150713_16-03m.txt  VEHICLES_20150713_16-03m.txt
DARP_IPS/datasets/20150713_16-03m - CPLEX - Empty-new/: LogFile_.txt  LogFile_20150713_16-03m.txt  Requests_20150713_16-03m.csv  Routes_20150713_16-03m.csv  epochSolution_20150713_16-03m.csv  finalSolution_20150713_16-03m.csv
DARP_IPS/datasets/20150713_16-03m - pulling/: INSTANCE_20150713_16-03m.txt  LogFile_20150713_16-03m.txt
DARP_IPS/datasets/20150713_16-06m/: IN_20150713_16-06m.txt  TR_20150713_16-06m.txt
DARP_IPS/datasets/limited_manhattan-vehicles/: vehicles_1000_4.txt  vehicles_1100_4.txt  vehicles_1200_4.txt  vehicles_1300_4.txt  vehicles_1400_4.txt  vehicles_1500_4.txt  vehicles_1600_4.txt  vehicles_1700_4.txt  vehicles_1800_4.txt  vehicles_1900_4.txt  vehicles_2000_4.txt  vehicles_2000_5.txt  vehicles_2500_4.txt  vehicles_3000_4.txt  vehicles_4000_4.txt  (+5 more)
DARP_IPS/docs/: parameters.md
DARP_IPS/my_datasets/: AnyParameters.json  Zones.txt  inputs.txt
DARP_IPS/src/: CMakeLists.txt  anyTimeMain.cpp  dynamicMain.cpp  main.cpp  makefile  makefile~  realTimeMain.cpp  staticMain.cpp
cpp/: CMakeLists.txt  FindEigen3.cmake  FindGUROBI.cmake  README.md  parameters.md
cpp/src/: realTimeMain.cpp
cpp/tests/: CMakeLists.txt  regression_toy.py  test_config_parser.cpp  test_framework.h  test_main.cpp  test_read_write.cpp
(+21578 files in other folders)
