[build-system]
requires = ["setuptools>=42", "wheel", "ninja", "pybind11>=2.6.0", "cmake>=3.12"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.9.6"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]

[tool.cibuildwheel]
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # Ruff-specific
    "UP",   # pyupgrade
]
